<resources>
    <string name="app_name">GitHub Users Search</string>
    <string name="search">Name…</string>
    <string name="search_hint">Masukkan Username</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="user_username">Username</string>


    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snackbar_success">Pencarian berhasil didapatkan</string>
    <string name="error_message">"error : "</string>
    <string name="try_again">try again</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="detail_followers">%s followers</string>
    <string name="detail_following">%s following</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="fullname">Fullname</string>
    <string name="place">Place</string>
    <string name="office">Office</string>
    <string name="repositories">Repositories</string>
    <string name="not_found">Not Found</string>
    <string name="detail_repositories"> %s repositories</string>
    <string name="success_search"> Berhasil menampilkan %d data</string>
    <string name="splash_screen_image">splash screen</string>
    <string name="btn_fav">btn_fav</string>
    <string name="success_add_favorite">Berhasil ditambahkan ke favorite</string>
    <string name="removed_from_favorite">Dihapus dari favorite</string>
    <string name="menu_favorite">menu favorite</string>
    <string name="theme_changer">ganti tema</string>

</resources>